@@ -5,3 +5,5 @@ the user or by the script?), it could also set `GIT_COMMITTER_NAME` and
 `GIT_COMMITTER_EMAIL` to the same values.  --[[JoshTriplett]]
 
 > See [[debbug 451023]] for a [[patch]] --[[Joey]]
+
+[[done]]
