@@ -28,6 +28,9 @@ ikiwiki (2.54) UNRELEASED; urgency=low
     work. Markdown removes one level of escaping.
   * Add a postscan hook.
   * search: Use postscan hook, avoid updating index when previewing.
+  * git: Put web committer name/openid/address in the git author field.
+    The committer's email address is not used (because leaking email addresses
+    is not liked by many users). Closes: #451023
 
   [ Simon McVittie ]
   * meta, inline: Support guid options, to allow forcing a particular url or
